--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'org.graphstream:gs-core:2.0'
+    implementation 'org.graphstream:gs-ui-swing:2.0'
+    implementation 'com.mysql:mysql-connector-j:8.4.0'
 }
 
 test {
