--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'org.graphstream:gs-core:2.0'
     implementation 'org.graphstream:gs-ui-swing:2.0'
+    implementation group: 'org.graphstream', name: 'gs-algo', version: '2.0'
     implementation 'com.mysql:mysql-connector-j:8.4.0'
 }
 
